@@ -1,1 +1,1 @@
-currentVersion=4.1.1.11
+currentVersion=4.1.1.12
