@@ -3,4 +3,4 @@ araneaframework.status=milestone
 version.stage=4
 version.milestone=1
 version.submilestone=1
-version.version=11
+version.version=12
